src/include/ndarray.h

/**
 * ndarray structure.
 *
 * @example
 * #include "ndarray.h"
 * #include "ndarray/dtypes.h"
 * #include "ndarray/index_modes.h"
 * #include "ndarray/orders.h"
 * #include "ndarray/base/bytes_per_element.h"
 * #include <stdlib.h>
 * #include <stdio.h>
 * #include <stdint.h>
 *
 * struct ndarray *x = malloc(sizeof(struct ndarray));
 * if (x == NULL) {
 *     fprintf(stderr, "Error allocating memory.\n");
 *     exit(1);
 * }
 *
 * // Create an underlying byte array:
 * uint8_t buffer[] = {
 *     0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
 * };
 * x->data = buffer;
 *
 * // Specify the underlying data type:
 * x->dtype = NDARRAY_FLOAT64;
 *
 * // Explicitly specify the number of bytes per element:
 * x->BYTES_PER_ELEMENT = NDARRAY_FLOAT64_BYTES_PER_ELEMENT;
 *
 * // Specify the array shape:
 * int64_t shape[] = {3}; // vector consisting of 3 doubles
 * x->shape = shape;
 *
 * // Specify the array strides:
 * int64_t strides[] = {x->BYTES_PER_ELEMENT};
 * x->strides = strides;
 *
 * // Specify the byte offset:
 * x->offset = 0;
 *
 * // Specify the array order (note: this does not matter for a 1-dimensional
 * // array):
 * x->order = NDARRAY_ROW_MAJOR;
 *
 * // Specify the index mode:
 * x->imode = NDARRAY_INDEX_ERROR;
 *
 * // Specify subscript index modes:
 * x->submodes = {NDARRAY_INDEX_ERROR};
 * x->nsubmodes = 1;
 *
 * // Explicitly specify the number of array dimensions:
 * x->ndims = 1; // vector
 *
 * // Explicitly specify the number of array elements (doubles):
 * x->length = x->shape[0];
 *
 * // Explicitly specify the number of bytes:
 * x->byteLength = (x->length) * (x->BYTES_PER_ELEMENT);
 *
 * // Explicitly set the array flags:
 * x->flags = ndarray_flags(x);
 *
 * // Free allocated memory:
 * ndarray_free(x);
 */
struct ndarray {
  // Underlying data type:
  int16_t dtype;

  // Pointer to the underlying byte array:
  uint8_t* data;

  // Number of array dimensions:
  int64_t ndims;

  // Array shape (dimensions):
  int64_t* shape;

  // Array strides (in bytes) specifying how to iterate over a strided array:
  int64_t* strides;

  // Byte offset which specifies the location at which to start iterating
  // over array elements:
  int64_t offset;

  // Array order (either row-major (C-style) or column-major (Fortran-style)):
  int8_t order;

  // Mode specifying how to handle indices which exceed array dimensions:
  int8_t imode;

  // Number of subscript modes:
  int64_t nsubmodes;

  // Mode(s) specifying how to handle subscripts which exceed array dimensions
  // on a per dimension basis :
  int8_t* submodes;

  // Number of array elements:
  int64_t length;

  // Size in bytes:
  int64_t byteLength;

  // Number of bytes per element (i.e., item size):
  int64_t BYTES_PER_ELEMENT;

  // Bit mask providing information regarding the memory layout of the array
  // (e.g., see macros):
  int64_t flags;
}
/**
 * Sets a double-precision complex floating-point ndarray data element specified
 * by a byte array pointer.
 */
int8_t ndarray_set_ptr_complex128(uint8_t* idx, const ndarray_complex128_t v);
/**
 * Sets a single-precision complex floating-point ndarray data element specified
 * by a byte array pointer.
 */
int8_t ndarray_set_ptr_complex64(uint8_t* idx, const ndarray_complex64_t v);
/**
 * Sets a boolean ndarray data element specified by a byte array pointer.
 */
int8_t ndarray_set_ptr_bool(uint8_t* idx, const bool v);
// ****************************************************************************
//                           set at index interface
// ****************************************************************************

/**
 * Sets an ndarray data element located at a specified linear index.
 */
int8_t ndarray_iset(
    const struct ndarray* arr, const int64_t idx, const void* v
);
/**
 * Sets a double-precision floating-point ndarray data element located at a
 * specified linear index.
 */
int8_t ndarray_iset_float64(
    const struct ndarray* arr, const int64_t idx, const double v
);
/**
 * Sets a single-precision floating-point ndarray data element located at a
 * specified linear index.
 */
int8_t ndarray_iset_float32(
    const struct ndarray* arr, const int64_t idx, const float v
);
/**
 * Sets an unsigned 64-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_uint64(
    const struct ndarray* arr, const int64_t idx, const uint64_t v
);
/**
 * Sets a signed 64-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_int64(
    const struct ndarray* arr, const int64_t idx, const int64_t v
);
/**
 * Sets an unsigned 32-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_uint32(
    const struct ndarray* arr, const int64_t idx, const uint32_t v
);
/**
 * Sets a signed 32-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_int32(
    const struct ndarray* arr, const int64_t idx, const int32_t v
);
/**
 * Sets an unsigned 16-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_uint16(
    const struct ndarray* arr, const int64_t idx, const uint16_t v
);
/**
 * Sets a signed 16-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_int16(
    const struct ndarray* arr, const int64_t idx, const int16_t v
);
/**
 * Sets an unsigned 8-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_uint8(
    const struct ndarray* arr, const int64_t idx, const uint8_t v
);
/**
 * Sets a signed 8-bit integer ndarray data element located at a specified
 * linear index.
 */
int8_t ndarray_iset_int8(
    const struct ndarray* arr, const int64_t idx, const int8_t v
);
/**
 * Sets a double-precision complex floating-point ndarray data element located
 * at a specified linear index.
 */
int8_t ndarray_iset_complex128(
    const struct ndarray* arr, const int64_t idx, const ndarray_complex128_t v
);
/**
 * Sets a single-precision complex floating-point ndarray data element located
 * at a specified linear index.
 */
int8_t ndarray_iset_complex64(
    const struct ndarray* arr, const int64_t idx, const ndarray_complex64_t v
);
/**
 * Sets a boolean ndarray data element located at a specified linear index.
 */
int8_t ndarray_iset_bool(
    const struct ndarray* arr, const int64_t idx, const bool v
);