lib/src/bindings.dart


  /// Sets a double-precision complex floating-point ndarray data element specified
  /// by a byte array pointer.
  int ndarray_set_ptr_complex128(
    ffi.Pointer<ffi.Uint8> idx,
    ndarray_complex128_t v,
  ) {
    return _ndarray_set_ptr_complex128(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_complex128Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ndarray_complex128_t)>>('ndarray_set_ptr_complex128');
  late final _ndarray_set_ptr_complex128 = _ndarray_set_ptr_complex128Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, ndarray_complex128_t)>();

  /// Sets a single-precision complex floating-point ndarray data element specified
  /// by a byte array pointer.
  int ndarray_set_ptr_complex64(
    ffi.Pointer<ffi.Uint8> idx,
    ndarray_complex64_t v,
  ) {
    return _ndarray_set_ptr_complex64(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>,
              ndarray_complex64_t)>>('ndarray_set_ptr_complex64');
  late final _ndarray_set_ptr_complex64 = _ndarray_set_ptr_complex64Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, ndarray_complex64_t)>();

  /// Sets a boolean ndarray data element specified by a byte array pointer.
  int ndarray_set_ptr_bool(
    ffi.Pointer<ffi.Uint8> idx,
    bool v,
  ) {
    return _ndarray_set_ptr_bool(
      idx,
      v,
    );
  }

  late final _ndarray_set_ptr_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Bool)>>('ndarray_set_ptr_bool');
  late final _ndarray_set_ptr_bool = _ndarray_set_ptr_boolPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, bool)>();

  /// Sets an ndarray data element located at a specified linear index.
  int ndarray_iset(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Void> v,
  ) {
    return _ndarray_iset(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_isetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Void>)>>('ndarray_iset');
  late final _ndarray_iset = _ndarray_isetPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Void>)>();

  /// Sets a double-precision floating-point ndarray data element located at a
  /// specified linear index.
  int ndarray_iset_float64(
    ffi.Pointer<ndarray> arr,
    int idx,
    double v,
  ) {
    return _ndarray_iset_float64(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Double)>>('ndarray_iset_float64');
  late final _ndarray_iset_float64 = _ndarray_iset_float64Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, double)>();

  /// Sets a single-precision floating-point ndarray data element located at a
  /// specified linear index.
  int ndarray_iset_float32(
    ffi.Pointer<ndarray> arr,
    int idx,
    double v,
  ) {
    return _ndarray_iset_float32(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Float)>>('ndarray_iset_float32');
  late final _ndarray_iset_float32 = _ndarray_iset_float32Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, double)>();

  /// Sets an unsigned 64-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_uint64(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_uint64(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Uint64)>>('ndarray_iset_uint64');
  late final _ndarray_iset_uint64 = _ndarray_iset_uint64Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets a signed 64-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_int64(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_int64(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Int64)>>('ndarray_iset_int64');
  late final _ndarray_iset_int64 = _ndarray_iset_int64Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets an unsigned 32-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_uint32(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_uint32(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Uint32)>>('ndarray_iset_uint32');
  late final _ndarray_iset_uint32 = _ndarray_iset_uint32Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets a signed 32-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_int32(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_int32(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Int32)>>('ndarray_iset_int32');
  late final _ndarray_iset_int32 = _ndarray_iset_int32Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets an unsigned 16-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_uint16(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_uint16(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Uint16)>>('ndarray_iset_uint16');
  late final _ndarray_iset_uint16 = _ndarray_iset_uint16Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets a signed 16-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_int16(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_int16(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Int16)>>('ndarray_iset_int16');
  late final _ndarray_iset_int16 = _ndarray_iset_int16Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets an unsigned 8-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_uint8(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_uint8(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Uint8)>>('ndarray_iset_uint8');
  late final _ndarray_iset_uint8 = _ndarray_iset_uint8Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets a signed 8-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iset_int8(
    ffi.Pointer<ndarray> arr,
    int idx,
    int v,
  ) {
    return _ndarray_iset_int8(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64, ffi.Int8)>>('ndarray_iset_int8');
  late final _ndarray_iset_int8 = _ndarray_iset_int8Ptr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, int)>();

  /// Sets a double-precision complex floating-point ndarray data element located
  /// at a specified linear index.
  int ndarray_iset_complex128(
    ffi.Pointer<ndarray> arr,
    int idx,
    ndarray_complex128_t v,
  ) {
    return _ndarray_iset_complex128(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_complex128Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ndarray_complex128_t)>>('ndarray_iset_complex128');
  late final _ndarray_iset_complex128 = _ndarray_iset_complex128Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ndarray_complex128_t)>();

  /// Sets a single-precision complex floating-point ndarray data element located
  /// at a specified linear index.
  int ndarray_iset_complex64(
    ffi.Pointer<ndarray> arr,
    int idx,
    ndarray_complex64_t v,
  ) {
    return _ndarray_iset_complex64(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ndarray_complex64_t)>>('ndarray_iset_complex64');
  late final _ndarray_iset_complex64 = _ndarray_iset_complex64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ndarray_complex64_t)>();

  /// Sets a boolean ndarray data element located at a specified linear index.
  int ndarray_iset_bool(
    ffi.Pointer<ndarray> arr,
    int idx,
    bool v,
  ) {
    return _ndarray_iset_bool(
      arr,
      idx,
      v,
    );
  }

  late final _ndarray_iset_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(
              ffi.Pointer<ndarray>, ffi.Int64, ffi.Bool)>>('ndarray_iset_bool');
  late final _ndarray_iset_bool = _ndarray_iset_boolPtr
      .asFunction<int Function(ffi.Pointer<ndarray>, int, bool)>();
}

/// Enumeration of underlying ndarray data types.
abstract class NDARRAY_DTYPE {
  /// Boolean data types:
  static const int NDARRAY_BOOL = 0;

  /// Integer data types:
  static const int NDARRAY_INT8 = 1;
  static const int NDARRAY_UINT8 = 2;
  static const int NDARRAY_UINT8C = 3;
  static const int NDARRAY_INT16 = 4;
  static const int NDARRAY_UINT16 = 5;
  static const int NDARRAY_INT32 = 6;
  static const int NDARRAY_UINT32 = 7;
  static const int NDARRAY_INT64 = 8;
  static const int NDARRAY_UINT64 = 9;
  static const int NDARRAY_INT128 = 10;
  static const int NDARRAY_UINT128 = 11;
  static const int NDARRAY_INT256 = 12;
  static const int NDARRAY_UINT256 = 13;

  /// Floating-point data types:
  static const int NDARRAY_FLOAT16 = 14;
  static const int NDARRAY_BFLOAT16 = 15;
  static const int NDARRAY_FLOAT32 = 16;
  static const int NDARRAY_FLOAT64 = 17;
  static const int NDARRAY_FLOAT128 = 18;

  /// Complex floating-point number data types:
  static const int NDARRAY_COMPLEX64 = 19;
  static const int NDARRAY_COMPLEX128 = 20;

  /// Define a data type for "binary" data:
  static const int NDARRAY_BINARY = 21;

  /// Define a data type for "generic" Dart values (objects):
  static const int NDARRAY_GENERIC = 22;

  /// "Compute" the number of data types (this works because of how `enum`
  /// works: the value is automatically set to the last enumerated type plus 1):
  static const int NDARRAY_NDTYPES = 23;

  /// Reserve a signaling value which is guaranteed not to be a valid type
  /// enumeration number:
  static const int NDARRAY_NOTYPE = 24;

  /// Indicate the start of user defined type numbers (leaving room for type
  /// growth above):
  static const int NDARRAY_USERDEFINED_TYPE = 256;
}

/// Enumeration of ndarray orders (i.e., memory layout/iteration order).
abstract class NDARRAY_ORDER {
  /// Row-major (C-style):
  static const int NDARRAY_ROW_MAJOR = 1;
